; ModuleID = '/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx_gpio.c_imx51_gpio_pin_access_32.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/arm/freescale/imx/extr_imx_gpio.c_imx51_gpio_pin_access_32.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.imx51_gpio_softc = type { i32 }

@EINVAL = common dso_local global i32 0, align 4
@IMX_GPIO_DR_REG = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i64, i64, i64, i64*)* @imx51_gpio_pin_access_32 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @imx51_gpio_pin_access_32(i32 %0, i64 %1, i64 %2, i64 %3, i64* %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i64, align 8
  %9 = alloca i64, align 8
  %10 = alloca i64, align 8
  %11 = alloca i64*, align 8
  %12 = alloca %struct.imx51_gpio_softc*, align 8
  store i32 %0, i32* %7, align 4
  store i64 %1, i64* %8, align 8
  store i64 %2, i64* %9, align 8
  store i64 %3, i64* %10, align 8
  store i64* %4, i64** %11, align 8
  %13 = load i64, i64* %8, align 8
  %14 = icmp ne i64 %13, 0
  br i1 %14, label %15, label %17

15:                                               ; preds = %5
  %16 = load i32, i32* @EINVAL, align 4
  store i32 %16, i32* %6, align 4
  br label %51

17:                                               ; preds = %5
  %18 = load i32, i32* %7, align 4
  %19 = call %struct.imx51_gpio_softc* @device_get_softc(i32 %18)
  store %struct.imx51_gpio_softc* %19, %struct.imx51_gpio_softc** %12, align 8
  %20 = load i64*, i64** %11, align 8
  %21 = icmp ne i64* %20, null
  br i1 %21, label %22, label %27

22:                                               ; preds = %17
  %23 = load %struct.imx51_gpio_softc*, %struct.imx51_gpio_softc** %12, align 8
  %24 = load i32, i32* @IMX_GPIO_DR_REG, align 4
  %25 = call i64 @READ4(%struct.imx51_gpio_softc* %23, i32 %24)
  %26 = load i64*, i64** %11, align 8
  store i64 %25, i64* %26, align 8
  br label %27

27:                                               ; preds = %22, %17
  %28 = load i64, i64* %9, align 8
  %29 = load i64, i64* %10, align 8
  %30 = or i64 %28, %29
  %31 = icmp ne i64 %30, 0
  br i1 %31, label %32, label %50

32:                                               ; preds = %27
  %33 = load %struct.imx51_gpio_softc*, %struct.imx51_gpio_softc** %12, align 8
  %34 = getelementptr inbounds %struct.imx51_gpio_softc, %struct.imx51_gpio_softc* %33, i32 0, i32 0
  %35 = call i32 @mtx_lock_spin(i32* %34)
  %36 = load %struct.imx51_gpio_softc*, %struct.imx51_gpio_softc** %12, align 8
  %37 = load i32, i32* @IMX_GPIO_DR_REG, align 4
  %38 = load %struct.imx51_gpio_softc*, %struct.imx51_gpio_softc** %12, align 8
  %39 = load i32, i32* @IMX_GPIO_DR_REG, align 4
  %40 = call i64 @READ4(%struct.imx51_gpio_softc* %38, i32 %39)
  %41 = load i64, i64* %9, align 8
  %42 = xor i64 %41, -1
  %43 = and i64 %40, %42
  %44 = load i64, i64* %10, align 8
  %45 = xor i64 %43, %44
  %46 = call i32 @WRITE4(%struct.imx51_gpio_softc* %36, i32 %37, i64 %45)
  %47 = load %struct.imx51_gpio_softc*, %struct.imx51_gpio_softc** %12, align 8
  %48 = getelementptr inbounds %struct.imx51_gpio_softc, %struct.imx51_gpio_softc* %47, i32 0, i32 0
  %49 = call i32 @mtx_unlock_spin(i32* %48)
  br label %50

50:                                               ; preds = %32, %27
  store i32 0, i32* %6, align 4
  br label %51

51:                                               ; preds = %50, %15
  %52 = load i32, i32* %6, align 4
  ret i32 %52
}

declare dso_local %struct.imx51_gpio_softc* @device_get_softc(i32) #1

declare dso_local i64 @READ4(%struct.imx51_gpio_softc*, i32) #1

declare dso_local i32 @mtx_lock_spin(i32*) #1

declare dso_local i32 @WRITE4(%struct.imx51_gpio_softc*, i32, i64) #1

declare dso_local i32 @mtx_unlock_spin(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
